// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sortUtilsClickHandler should delete previous in case of single 1`] = `
Array [
  Object {
    "key": "id",
    "title": "Id",
  },
  Object {
    "key": "column",
    "title": "Column 1",
  },
  Object {
    "key": "column2",
    "sortDirection": "ascend",
    "title": "Column 2",
  },
]
`;

exports[`sortUtilsClickHandler should set sortingIndexes in case of multiple 1`] = `
Array [
  Object {
    "key": "id",
    "sortDirection": "descend",
    "sortIndex": 1,
    "title": "Id",
  },
  Object {
    "key": "column",
    "sortDirection": "ascend",
    "sortIndex": 2,
    "title": "Column 1",
  },
  Object {
    "key": "column2",
    "sortDirection": "ascend",
    "sortIndex": 3,
    "title": "Column 2",
  },
]
`;

exports[`sortUtilsClickHandler should set sortingIndexes in case of multiple and all columns have sort index 1`] = `
Array [
  Object {
    "key": "id",
    "sortDirection": "descend",
    "sortIndex": 1,
    "title": "Id",
  },
  Object {
    "key": "column",
    "sortDirection": "ascend",
    "sortIndex": 2,
    "title": "Column 1",
  },
  Object {
    "key": "column2",
    "sortDirection": "ascend",
    "sortIndex": 3,
    "title": "Column 2",
  },
]
`;
